Initialize BlueZ in app_shell on Linux

Whitelisted Linux apps can access chrome.bluetooth. Initialize Bluetooth so
we don't crash on those apps.

BUG=711142
R=rkc@chromium.org,rdevlin.cronin@chromium.org

Review-Url: https://codereview.chromium.org/2819593003
Cr-Commit-Position: refs/heads/master@{#469540}